# fasttext-predict

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: wheels.yml
